--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <title>TSI ON OXAGON PROJECT.</title>
+    <title>GREEN WATER TRAFFIC LIGHT SYSTEM</title>
     <meta name="description" content="" />
     <meta name="keywords" content="" />
 
@@ -129,7 +129,7 @@
             <div class="c-block c-block--large">
                 <div class="c-block__content">
                     <div class="c-title c-title--date">Application Letter - Fleet Management Trainees - 2nd Assignment</div>
-                    <h1>Project TSI on Oxagon Project</h1>
+                    <h1>GREEN WATER TRAFFIC LIGHT SYSTEM</h1>
 
 
                     <div class="c-content">
