--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <title>GREEN WATER TRAFFIC LIGHT SYSTEM</title>
+    <title>GREEN WATER TRAFFIC LIGHT SYSTEM - WAVEJUMP</title>
     <meta name="description" content="" />
     <meta name="keywords" content="" />
 
@@ -128,7 +128,7 @@
         <div class="col-12 col-lg-7 col-xl-8">
             <div class="c-block c-block--large">
                 <div class="c-block__content">
-                    <div class="c-title c-title--date">Application Letter - Fleet Management Trainees - 2nd Assignment</div>
+                    <div class="c-title c-title--date">Wavejump Idea Portal for the Ideas Market</div>
                     <h1>GREEN WATER TRAFFIC LIGHT SYSTEM</h1>
 
 
