--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
             <div class="c-meta-nav__brand">
                 <div class="c-logo">
                     <a href="/about-yourizon/" class="c-logo__link" rel="home">
-                        <img class="c-logo__img  c-logo__img--default" src="/assets/logo-yourizon.svg" alt="Yourizon" />
-                        <img class="c-logo__img  c-logo__img--payoff" src="/assets/logo-yourizon-payoff.svg" alt="Yourizon, Your daily Boskalis news" />
+                        <img class="c-logo__img  c-logo__img--default" src="/assets/wj.png" alt="Yourizon" />
+                        <img class="c-logo__img  c-logo__img--payoff" src="/assets/wj.png" alt="Yourizon, Your daily Boskalis news" style="padding: 0rem";/>
                     </a>
                 </div>
             </div>
@@ -83,33 +83,7 @@
                 <div class="c-hamburger__inner"></div>
             </div>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <article class="c-search-widget c-search-widget--header">
-            </article>
-            <ul class="navbar-nav c-nav__list">
-                        <li class="nav-item c-nav__item">
-                            <a href="/en/bwc-radio/" class="nav-link c-nav__link">BWC Radio</a>
-                        </li>
-                        <li class="nav-item c-nav__item">
-                            <a href="/en/people/" class="nav-link c-nav__link">People</a>
-                        </li>
-                        <li class="nav-item c-nav__item">
-                            <a href="/en/strategy/" class="nav-link c-nav__link">Strategy</a>
-                        </li>
-                        <li class="nav-item c-nav__item">
-                            <a href="/en/projects/" class="nav-link c-nav__link">Projects</a>
-                        </li>
-                        <li class="nav-item c-nav__item">
-                            <a href="/en/equipment/" class="nav-link c-nav__link">Equipment</a>
-                        </li>
-                        <li class="nav-item c-nav__item">
-                            <a href="/en/sustainability/" class="nav-link c-nav__link">Sustainability</a>
-                        </li>
-                        <li class="nav-item c-nav__item">
-                            <a href="/en/yourizon-app/" class="nav-link c-nav__link">App</a>
-                        </li>
-            </ul>
-        </div>
+        
     </nav>
 </header>
 <!--ZOOMRESTART-->
@@ -133,7 +107,7 @@
 
 
                     <div class="c-content">
-                        <p>Before applying for the Boskalis Fleet Management Traineeship, I understood that I wanted a job where I can provide the support where it is required. Indeed, working on a multidisciplnary role was what resonated on my mind. <br>
+                        <p>Anchor handling is considered as one of the most<br>
                             <br>As I have discussed with my internal coach Gaby Steentjes, on some positions, a generalist can be someone that is flexible enough to commit with the project and solve issues on such different topics as may arise. In my opinion, I think this is one of the positions where a multiskilled colleague can become a key partner on the following six months for the project.<br>
                         <img src="/assets/oxagon-infgrph-en-1.jpg" style="padding: 30px">
                         <p>Being part of a project as Oxagon is somethign that can really help me widen my perspective on the projects that Boskalis performs. Also, because Oxagon is being built with the purpose of creating a hub for innovation, where  the use of technologies will stop being a disruption and being a natural evolution. and CO2 footprint would be zero. I think that developing a Boskalis like website is maybe a good example of my deep connection with new technologies, isn´t it?</p>
