--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                     <div class="c-content">
                         <p>Anchor Handling is considered a very dangerous job to perform: you are constantly exposed to the line of fire. Tension on wires, lifted objects, big buoys on deck. All these happens while the vessel is rolling, pitching, and some times, waves are breaking on deck. <br><br>
 
-                            <div style="max-width: 640px"><div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;"><iframe src="https://boskalis-my.sharepoint.com/personal/daniel_menendez_fernandez_boskalis_com/_layouts/15/embed.aspx?UniqueId=b4f94392-1112-4014-b391-5058b3f2ec50&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create" width="640" height="360" frameborder="0" scrolling="no" allowfullscreen title="AH Video Wavejump.mp4" style="border:none; position: absolute; top: 0; left: 0; right: 0; bottom: 0; height: 100%; max-width: 100%;"></iframe></div></div><br><br>
-
+                            <iframe src="https://boskalis-my.sharepoint.com/personal/daniel_menendez_fernandez_boskalis_com/_layouts/15/embed.aspx?UniqueId=b4f94392-1112-4014-b391-5058b3f2ec50&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create" width="640" height="360" frameborder="0" scrolling="no" allowfullscreen title="AH Video Wavejump.mp4"></iframe>
+                                                        
                             Usually vessels operate within a defined weather condition. However, our fleet operates sometimes in marginal conditions. In order to operate, special procedures take place: a job hazard analysis, special toolbox meetings, enhanced lookout.<br><br>
                             
                             <img src="/assets/6. green water traffic light.PNG" style="padding: 30px">
