video changed to youtube

--- a/index.html
+++ b/index.html
@@ -108,9 +108,8 @@
 
                     <div class="c-content">
                         <p>Anchor Handling is considered a very dangerous job to perform: you are constantly exposed to the line of fire. Tension on wires, lifted objects, big buoys on deck. All these happens while the vessel is rolling, pitching, and some times, waves are breaking on deck. <br><br>
-                            <strong>SIGN IN TO SEE VIDEO BELOW WITH ACCIDENTS AND SOLUTION PROPOSAL!!</strong>
-                            <iframe src="https://boskalis-my.sharepoint.com/personal/daniel_menendez_fernandez_boskalis_com/_layouts/15/embed.aspx?UniqueId=b4f94392-1112-4014-b391-5058b3f2ec50&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create" width="640" height="360" frameborder="0" scrolling="no" allowfullscreen title="AH Video Wavejump.mp4"></iframe>
-
+                            <strong>SEE VIDEO BELOW WITH ACCIDENTS AND SOLUTION PROPOSAL!!</strong>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/InJD0VsnUas" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                             <br><br><br>Usually vessels operate within a defined weather condition. However, our fleet operates sometimes in marginal conditions. In order to operate, special procedures take place: a job hazard analysis, special toolbox meetings, enhanced lookout.<br><br>
                             
                             <strong>WAVEJUMP PROJECT POSTER</strong>
